--- a/haikumaker.html
+++ b/haikumaker.html
@@ -36,7 +36,7 @@
  rand=Math.floor(Math.random()*5);
  if(rand==0)what="日記帳　"
  if(rand==1)what="ホトトギス　"
- if(rand==2)what="猫の声　"
+ if(rand==2)what="猫の恋　"
  if(rand==3)what="うそっちさん　"
  if(rand==4)what="御朱印帳　"
  msg=msg+what;
